--- a/app/src/main/res/layout/view_main.xml
+++ b/app/src/main/res/layout/view_main.xml
@@ -291,10 +291,9 @@
             style="@style/MainPrimaryButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="24dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="38dp"
+            android:layout_marginBottom="24dp"
             android:enabled="false"
             android:text="@string/save_payment" />
 
