--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="bottomSheetDialogTheme">@style/ThemeOverlay.App.BottomSheetDialog</item>
     </style>
 
     <style name="SmallTextStyle" parent="Widget.MaterialComponents.TextView">
@@ -57,13 +58,13 @@
     </style>
 
     <style name="Checkbox" parent="Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="android:buttonTint">@color/checkbox_filter_tint</item>
+        <item name="android:buttonTint">@color/compound_button_tint</item>
         <item name="android:button">@drawable/ic_checkbox_active</item>
-        <item name="android:textAppearance">@style/Checkbox.TextAppearance</item>
+        <item name="android:textAppearance">@style/CompoundButton.TextAppearance</item>
         <item name="android:paddingStart">13dp</item>
     </style>
 
-    <style name="Checkbox.TextAppearance" parent="TextAppearance.AppCompat">
+    <style name="CompoundButton.TextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">roboto</item>
@@ -90,6 +91,27 @@
     <style name="AppMaterialToolbar.TextAppearance" parent="@style/TextAppearance.MaterialComponents.Headline6">
         <item name="fontFamily">roboto</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ThemeOverlay.App.BottomSheetDialog" parent="ThemeOverlay.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/ModalBottomSheetDialog</item>
+    </style>
+
+    <style name="ModalBottomSheetDialog" parent="Widget.MaterialComponents.BottomSheet.Modal">
+        <item name="backgroundTint">@color/white</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.App.LargeComponent</item>
+    </style>
+
+    <style name="ShapeAppearance.App.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">18dp</item>
+    </style>
+
+    <style name="RadioButton" parent="Base.Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:textAppearance">@style/CompoundButton.TextAppearance</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:buttonTint">@color/compound_button_tint</item>
+        <item name="android:button">@drawable/ic_checked_orange_active</item>
     </style>
 
 </resources>
